0.93  2025-10-12
    [Feature]
    - Added delpaths(paths) helper to delete multiple keys or indices using
      jq-compatible path arrays evaluated via arbitrary filters. Updated the
      documentation and regression tests accordingly.

0.92  2025-10-11
    [Feature]
    - Added map_values(filter) helper to transform every value within objects
      using jq-compatible filter semantics, dropping keys when the filter
      yields no result and recursing through arrays of objects. Documented the
      helper across README, POD, CLI help, and regression tests.

0.91  2025-10-11
    [Feature]
    - Added indices(value) helper to emit every index where the supplied value
      occurs within arrays or strings, matching jq's behaviour for substring and
      element searches. Documented the helper across README, POD, CLI help, and
      regression tests.

0.90  2025-10-11
    [Feature]
    - Added any([filter]) helper to mirror jq's any/0 and any/1 behaviour for
      truthiness checks over arrays and scalars, including nested filter
      evaluation. Documented the helper across README, POD, CLI help, and
      regression tests.

0.89  2025-10-11
    [Feature]
    - Added paths() helper to enumerate every nested key/index path in objects,
      arrays, and scalars (empty path) matching jq's behaviour.
    - Documented the helper across README, POD, and regression tests.

0.88  2025-10-11
    [Feature]
    - Added explode() and implode() helpers to convert between strings and
      arrays of Unicode code points, mirroring jq's functions and handling
      nested arrays element-wise.
    - Documented the helpers across README, POD, and regression tests.

0.87  2025-10-11
    [Feature]
    - Added ltrimstr(prefix) and rtrimstr(suffix) helpers to remove literal
      prefixes/suffixes from strings while preserving non-matching values and
      recursively processing arrays.
    - Documented the helpers across README, POD, CLI help, and regression tests.

0.86  2025-10-11