@@ -350,6 +350,7 @@ Supported Functions:
   round()          - Round numbers to the nearest integer (half-up semantics)
   clamp(MIN, MAX)  - Clamp numeric values within an inclusive range
   tostring()       - Convert values into their JSON string representation
+  tojson()         - Encode values as JSON text regardless of type
   to_number()      - Coerce numeric-looking strings/booleans into numbers
   nth(N)           - Get the Nth element of an array (zero-based index)
   index(VALUE)     - Return the zero-based index of VALUE within arrays or strings
